[package]
name = "worker-rust"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.21"
serde_json = "1.0.67"
wasm-bindgen = "=0.2.91"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

console_error_panic_hook = { version = "0.1.1", optional = true }

wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    'Request',
    'Response',
    'ResponseInit',
    'Url',
    'UrlSearchParams',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
